<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/Chats" />

    <item
        android:id="@+id/questions"
        android:icon="@drawable/ic_live_help_black_24dp"
        android:title="@string/My_Questions" />

    <item
        android:id="@+id/bids"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/bids" />

    <item
        android:id="@+id/transaction"
        android:icon="@drawable/ic_loop_black_24dp"
        android:title="@string/transaction"/>

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_businessman"
        android:title="@string/Account" />

</menu>