<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/chat">

    <fragment
        android:id="@+id/chat"
        android:name="com.example.profitclub.ui.chats.ChatsFragment"
        android:label="@string/fragment_chats"
        tools:layout="@layout/fragment_chats" >
    </fragment>

    <fragment
        android:id="@+id/questions"
        android:name="com.example.profitclub.ui.questions.QuestionsFragment"
        android:label="@string/fragment_questions"
        tools:layout="@layout/fragment_questions" />

    <fragment
        android:id="@+id/bids"
        android:name="com.example.profitclub.ui.bids.BidsFragment"
        tools:layout="@layout/fragment_bids"/>

    <fragment
        android:id="@+id/transaction"
        android:name="com.example.profitclub.ui.transactions.TransactionFragment"
        tools:layout="@layout/fragment_transaction"/>

    <fragment
        android:id="@+id/account"
        android:name="com.example.profitclub.ui.account.AccountFragment"
        android:label="@string/fragment_account"
        tools:layout="@layout/fragment_account" />
m
</navigation>